{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 22,
  "lineage": "0518c933-37bb-5539-522c-61571dbc849f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "testvpc1_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575108956505:internet-gateway/igw-08a3c1047ea1fa4ff",
            "id": "igw-08a3c1047ea1fa4ff",
            "owner_id": "575108956505",
            "tags": {
              "Name": "testvpc1-igw"
            },
            "tags_all": {
              "Name": "testvpc1-igw"
            },
            "vpc_id": "vpc-0d25956921df0e2e0"
          },
          "dependencies": [
            "aws_vpc.testvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575108956505:route-table/rtb-091b874a989192492",
            "id": "rtb-091b874a989192492",
            "owner_id": "575108956505",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "testvpc1-private-rt"
            },
            "tags_all": {
              "Name": "testvpc1-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d25956921df0e2e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575108956505:route-table/rtb-0ce0e99f035172747",
            "id": "rtb-0ce0e99f035172747",
            "owner_id": "575108956505",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08a3c1047ea1fa4ff",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "testvpc1-public-rt"
            },
            "tags_all": {
              "Name": "testvpc1-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d25956921df0e2e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.testvpc1_igw",
            "aws_vpc.testvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e32ec33f9eb7faf",
            "route_table_id": "rtb-0ce0e99f035172747",
            "subnet_id": "subnet-0cc44a4ddaad20b17"
          },
          "dependencies": [
            "aws_internet_gateway.testvpc1_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.testvpc1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575108956505:subnet/subnet-0e201cbda740ec7d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e201cbda740ec7d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "575108956505",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testvpc1-private-subnet",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "testvpc1-private-subnet",
              "Type": "Private"
            },
            "vpc_id": "vpc-0d25956921df0e2e0"
          },
          "dependencies": [
            "aws_vpc.testvpc1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575108956505:subnet/subnet-0cc44a4ddaad20b17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc44a4ddaad20b17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "575108956505",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testvpc1-public-subnet",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "testvpc1-public-subnet",
              "Type": "Public"
            },
            "vpc_id": "vpc-0d25956921df0e2e0"
          },
          "dependencies": [
            "aws_vpc.testvpc1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testvpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575108956505:vpc/vpc-0d25956921df0e2e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/17",
            "default_network_acl_id": "acl-0f97e77572f732b32",
            "default_route_table_id": "rtb-026317119d1d569b0",
            "default_security_group_id": "sg-0bc64052e96ee2dfd",
            "dhcp_options_id": "dopt-01f28bcaa903e605a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d25956921df0e2e0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-026317119d1d569b0",
            "owner_id": "575108956505",
            "tags": {
              "Name": "testvpc1"
            },
            "tags_all": {
              "Name": "testvpc1"
            }
          }
        }
      ]
    }
  ]
}